--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
     <nav>
-        <img src="images/logo.png" alt="logo">
+        <img src="Netflix-inter/images/logo.png" alt="logo">
         <div>
             <button class="language-btn">English <img src="images/down-icon.png" alt=""></button>
             <button>Sign In</button>
@@ -34,7 +34,7 @@
             <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
         </div>
         <div class="img-col">
-            <img src="images/feature-1.png" alt="">
+            <img src="Netflix-inter/images/feature-1.png" alt="">
         </div>
     </div>
 
@@ -42,7 +42,7 @@
 
     <div class="row">
         <div class="img-col">
-            <img src="images/feature-2.png" alt="">
+            <img src="Netflix-inter/images/feature-2.png" alt="">
         </div>
         <div class="text-col">
             <h2>Download your shows to watch offline</h2>
@@ -58,7 +58,7 @@
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
         <div class="img-col">
-            <img src="images/feature-3.png" alt="">
+            <img src="Netflix-inter/images/feature-3.png" alt="">
         </div>
     </div>
 
@@ -66,7 +66,7 @@
     
     <div class="row">
         <div class="img-col">
-            <img src="images/feature-4.png" alt="">
+            <img src="Netflix-inter/images/feature-4.png" alt="">
         </div>
         <div class="text-col">
             <h2>Create profiles for kids</h2>
